Trying to get the gradle build to work, but it won't.  It has trouble with the xml-apis-xerces module and can't run unit tests. Sticking with maven for the time being.